# screencapn

./: .gitignore  .gitleaksignore  Cargo.toml  LICENSE  PRIVACY.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: audit.yml
crates/screencaptn-core/: Cargo.toml
crates/screencaptn-core/src/: annotation.rs  document.rs  geometry.rs  history.rs  lib.rs  session.rs  settings.rs  style.rs
crates/screencaptn-win/: Cargo.toml  app.manifest  build.rs
crates/screencaptn-win/assets/web-ui/: app.bundle.js  app.js  index.html
crates/screencaptn-win/assets/web-ui/src/: app-entry.js
crates/screencaptn-win/src/: app_icon.rs  diagnostics.rs  hotkey.rs  main.rs  native.rs  overlay.rs  settings.rs  shortcut_window.rs  single_instance.rs  startup.rs  theme.rs  tray.rs  update_window.rs  updates.rs  util.rs  web_ui.rs
docs/: continuation.md  handover-v1.0.0.0.md  handover.md  microsoft-store-path-a.md  performance-optimization-prd.md  web-export-renderer-prd.md
packaging/store/: AppxManifest.xml
scripts/: dev-check.ps1  dev-run.ps1  dev-stop.ps1  store-release-check.ps1
