[workspace]
members = [
  "crates/screencaptn-core",
  "crates/screencaptn-win",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Screen Captn"]
license = "MIT"
repository = "https://github.com/aldoarriaga/screencapn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
